examples/invalid/14_builtin_without_expected_type.lane
// invalid: builtin names must belong to the compiler-owned intrinsic table
module Examples.Invalid14

pub fn bad() -> Int {
  let x = builtin("%anything")
  x
}
